--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
   "bot-account": {
-    "username": "Guardian",
+    "username": "BabyZ",
     "password": "",
-    "type": "mojang"
+    "type": "offline"
   },
 
   "server": {
