--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "minecraft-afk-bot",
-  "version": "2.1",
-  "description": "Afk bot for minecraft servers with advanced AI features.",
+  "name": "BabyZ",
+  "version": "2.1.0",
+  "description": "Advanced Minecraft AI bot with mining, building, farming, and combat features.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Lamgerr",
+  "author": "Khalid Khan",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^4.18.1",
     "mineflayer": "^4.30.0",
     "mineflayer-collectblock": "^1.6.0",
     "mineflayer-pathfinder": "^2.4.5",
